--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
 </head>
 <body class="bg-light text-center">
   <h1 class="font-italic my-3">Search your giph</h1>
-  <button class="btn-primary rounded">Search</button>
+
+  <form class="form-inline justify-content-center">
+    <input class="form-control mr-sm-2" type="search" placeholder="Keyword" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
 
   <div class="my-5">
     <img src="#" id="giph" class="rounded">
